--- a/index.html
+++ b/index.html
@@ -1,74 +1,76 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <title>Vue.js App</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <div id="app">
-      <button @click="addShirt()">Adicionar Camisa</button>
-      <br />
-      <p>{{ addCurrency(calculateSalesTax(shirtPrice)) }}</p>
-      <p>The shirt costs {{ shirtCost }}</p>
-      <p>The hat costs {{ hatCost }}</p>
-      <p>
-        Quantidade total da Camisas: {{ quantidade }}. Valor total:
-        {{ totalCompraCamisa }}.
-      </p>
+        <button @click="addShirt()">Adicionar Camisa</button>
+        <br />
+        <p>{{ addCurrency(calculateSalesTax(shirtPrice)) }}</p>
+        <p>The shirt costs {{ shirtCost }}</p>
+        <p>The hat costs {{ hatCost }}</p>
+        <p>
+            Quantidade total da Camisas: {{ quantidade }}. Valor total: {{ totalCompraCamisa }}.
+        </p>
     </div>
     <script src="https://unpkg.com/vue"></script>
     <script type="text/javascript">
-      const app = new Vue({
-        el: "#app",
-        data: {
-          shirtPrice: 25,
-          hatPrice: 10,
-          currency: "$",
-          salesTax: 16,
-          quantidade: 1
-        },
-        computed: {
-          cost() {
-            // Work out the price of the item including salesTax;
-            let itemCost = parseFloat(
-              Math.round((this.salesTax / 100) * this.price) + this.price
-            ).toFixed(2);
-            // Add text before displaying the currency and amount;
-            let output = "This item costs " + this.currency + itemCost;
-            // Append to the output variable the price without salesTax
-            output +=
-              " (" + this.currency + this.price + " excluding salesTax)";
-            // Return the output value
-            return output;
-          },
-          shirtCost() {
-            return this.addCurrency(this.calculateSalesTax(this.shirtPrice));
-          },
-          hatCost() {
-            return this.addCurrency(this.calculateSalesTax(this.hatPrice));
-          },
-          totalCompraCamisa() {
-            return this.addCurrency(
-              this.calculateSalesTax(this.quantidade * this.shirtPrice)
-            );
-          }
-        },
-        methods: {
-          calculateSalesTax(price) {
-            // Work out the price of the item including sales tax
-            return parseFloat(
-              Math.round((this.salesTax / 100) * price) + price
-            ).toFixed(2);
-          },
-          addCurrency(price) {
-            return this.currency + price;
-          },
-          addShirt() {
-            this.quantidade += 1;
-          }
-        }
-      });
+        const app = new Vue({
+            //teste - alteracao marco
+            el: "#app",
+            data: {
+                shirtPrice: 25,
+                hatPrice: 10,
+                currency: "$",
+                salesTax: 16,
+                quantidade: 1
+            },
+            computed: {
+                cost() {
+                    // Work out the price of the item including salesTax;
+                    let itemCost = parseFloat(
+                        Math.round((this.salesTax / 100) * this.price) + this.price
+                    ).toFixed(2);
+                    // Add text before displaying the currency and amount;
+                    let output = "This item costs " + this.currency + itemCost;
+                    // Append to the output variable the price without salesTax
+                    output +=
+                        " (" + this.currency + this.price + " excluding salesTax)";
+                    // Return the output value
+                    return output;
+                },
+                shirtCost() {
+                    return this.addCurrency(this.calculateSalesTax(this.shirtPrice));
+                },
+                hatCost() {
+                    return this.addCurrency(this.calculateSalesTax(this.hatPrice));
+                },
+                totalCompraCamisa() {
+                    return this.addCurrency(
+                        this.calculateSalesTax(this.quantidade * this.shirtPrice)
+                    );
+                }
+            },
+            methods: {
+                calculateSalesTax(price) {
+                    // Work out the price of the item including sales tax
+                    return parseFloat(
+                        Math.round((this.salesTax / 100) * price) + price
+                    ).toFixed(2);
+                },
+                addCurrency(price) {
+                    return this.currency + price;
+                },
+                addShirt() {
+                    this.quantidade += 1;
+                }
+            }
+        });
     </script>
-  </body>
+</body>
+
 </html>
